[컴포넌트 수정] className 추가

--- a/src/products/Blog/Card/style.module.scss
+++ b/src/products/Blog/Card/style.module.scss
@@ -3,6 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   max-width: 240px;
+  min-width: 240px;
   box-shadow: 0 2px 20px 1px rgba(0, 0, 0, 0.3);
   transition: transform 0.2s ease-in;
   cursor: pointer;
