--- a/src/products/Blog/Card/style.module.scss
+++ b/src/products/Blog/Card/style.module.scss
@@ -33,7 +33,13 @@
     }
 
     .imageWrapper {
+      height: 130px;
+
       .image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
       }
     }
 
