--- a/src/products/Sidebar/style.module.scss
+++ b/src/products/Sidebar/style.module.scss
@@ -1,7 +1,7 @@
 .default {
   & .sidebarWrapper {
     width: 300px;
-    height: auto;
+    min-height: 600px;
     box-shadow: 0 2px 20px 1px rgba(0, 0, 0, 0.3);
 
     & .sidebar {
@@ -11,9 +11,6 @@
 
           & .text {
           }
-        }
-
-        & .select {
         }
       }
     }
