--- a/src/components/molecules/A/style.module.scss
+++ b/src/components/molecules/A/style.module.scss
@@ -4,6 +4,8 @@
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+  width: 100%;
+  height: auto;
 
   &:hover {
     text-decoration: none;
